--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<section class="header d-flex justify-content-center align-items-center">
+<section class="header d-flex column justify-content-center align-items-center">
     <div class="headerIntro">
         <ps>Here’s</ps>
-        <h1 class="italic">JOANNE</h1>
-        <p class="italic">Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
+        <h1>JOANNE</h1>
+        <p>Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
         <div class="socialIcon">
             <ul>
                 <li>
@@ -25,70 +25,75 @@
         </div>
     </div>
 </section>
-<section class="about italic d-flex justify-content-center">
+    <ul class="text-center">
+<section class="about text-center d-flex column justify-content-center ">
     <h2>About</h2>
     <img src="images/photo.png" alt="Joanne Chen photo">
     <div>
         <p>Joanne Chen</p><p>1997/10/10</p>
         <p>National Hex School Normal University 
             <br>Department of Visual Design
+            <hr>
         </p>
     </div>
-    <div class="line"><hr></div>
     <ul>
         <li>
-            <span>Founder of ‘’XXXD Official’’</span>
+            <div class="circle"></div><p>Founder of ‘’XXXD Official’’</p>
         </li>
         <li>
-            <span>Graphic Designer</span>
+            <div class="circle"></div><p>Graphic Designer</p>
         </li>
         <li>
-            <span>Graphic Intern of Hex School</span>
+            <div class="circle"></div><p>Graphic Intern of Hex School</p>
         </li>
     </ul>
 </section>
-<section class="brand d-flex justify-content-center">
+<section class="brand d-flex column justify-content-center">
     <h2>My Brand ‘’XXXD’’</h2>
     <p>Just Keep XXXD Everyday</p>
     <p>2020 年創立的個人服飾品牌
         <br>引領叛逆少年開啟與社會對話的窗口
         <br>主打概念潮流T-Shirt
     </p>
-    <img src="images/brand_img1.png" alt="brand images">
-    <img src="images/brand_img2.png" alt="brand images">
-    <img src="images/brand_img3.png" alt="brand images">
+    <img class="brand-img1" src="images/brand_img1.png" alt="brand images">
+    <div class="w-1200 d-flex justify-space-around">
+        <img src="images/brand_img2.png" alt="brand images">
+        <img src="images/brand_img3.png" alt="brand images">
+    </div>
 </section>
 <section class="other">
     <h2>Other Works</h2>
     <p>2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
-    <div>
-        <img src="images/work_img1.png" alt="work image">
-        <img src="images/work_img2.png" alt="work image">
-        <img src="images/work_img3.png" alt="work image">
-        <p>海報設計/2018</p>
-    </div>
-    <div>
-        <div>
-            <img src="images/work_img4.png" alt="work image">
-            <p>概念攝影/2018</p>
+    <div class="other-bg">
+        <div class="image-top ">
+            <img src="images/work_img1.png" alt="work image">
+            <img src="images/work_img2.png" alt="work image">
+            <img src="images/work_img3.png" alt="work image">
+            <p>海報設計/2018</p>
         </div>
-        <div>
-            <img src="images/work_img5.png" alt="work image">
-            <p>概念攝影/2018</p>
+        <div class="w-1200 d-flex justify-space-around">
+            <div>
+                <img src="images/work_img4.png" alt="work image">
+                <p>概念攝影/2018</p>
+            </div>
+            <div>
+                <img src="images/work_img5.png" alt="work image">
+                <p>概念攝影/2018</p>
+            </div>
         </div>
-    </div>
-    <div>
-        <div>
-            <img src="images/work_img6.png" alt="work image">
-            <p>sasa 酒標設計/2019</p>
-        </div>
-        <div>
-            <img src="images/work_img7.png" alt="work image">
-            <p>攝影創作/2018</p>
-        </div>
-        <div>
-            <img src="images/work_img8.png" alt="work image">
-            <p>官網設計/2020</p>
+        <div class="w-1200 d-flex justify-space-around">
+            <div>
+                <img src="images/work_img6.png" alt="work image">
+                <p>sasa 酒標設計/2019</p>
+            </div>
+            <div>
+                <img src="images/work_img7.png" alt="work image">
+                <p>攝影創作/2018</p>
+            </div>
+            <div>
+                <img src="images/work_img8.png" alt="work image">
+                <p>官網設計/2020</p>
+            </div>
         </div>
     </div>
 </section>
