修正錯誤標籤

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <section class="header d-flex column justify-content-center align-items-center">
     <div class="headerIntro">
-        <ps>Here’s</ps>
+        <span>Here’s</span>
         <h1>JOANNE</h1>
         <p>Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
         <div class="socialIcon">
