--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
         <span>Here’s</span>
         <h1>JOANNE</h1>
         <p>Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
-        <div class="socialIcon">
-            <ul>
-                <li>
-                    <a href="#"><img src="images/behance.svg" alt="behance icon"></a>
-                    <a href="#"><img src="images/facebook.svg" alt="facebook icon"></a>
-                    <a href="#"><img src="images/instagram.svg" alt="instagram icon"></a>
-                    <a href="#"><img src="images/youtube.svg" alt="youtube icon"></a>
-                </li>
-            </ul>
-        </div>
+        <ul class="socialIcon">
+            <li><a href="#"><img src="images/behance.svg" alt="behance icon"></a><li>
+            </li><a href="#"><img src="images/facebook.svg" alt="facebook icon"></a><li>
+            </li><a href="#"><img src="images/instagram.svg" alt="instagram icon"></a><li>
+            </li><a href="#"><img src="images/youtube.svg" alt="youtube icon"></a></li>
+        </ul>
     </div>
 </section>
     <ul class="text-center">
