--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!--   BANNER   -->
 <section class="header d-flex column justify-content-center align-items-center">
     <div class="headerIntro">
         <span>Here’s</span>
         <h1>JOANNE</h1>
         <p>Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
-        <ul class="socialIcon">
+        <ul class="socialIcon d-flex">
             <li><a href="#"><img src="images/behance.svg" alt="behance icon"></a><li>
             </li><a href="#"><img src="images/facebook.svg" alt="facebook icon"></a><li>
             </li><a href="#"><img src="images/instagram.svg" alt="instagram icon"></a><li>
@@ -21,7 +22,7 @@
         </ul>
     </div>
 </section>
-    <ul class="text-center">
+<!--   ABOUT   -->
 <section class="about text-center d-flex column justify-content-center ">
     <h2>About</h2>
     <img src="images/photo.png" alt="Joanne Chen photo">
@@ -44,7 +45,8 @@
         </li>
     </ul>
 </section>
-<section class="brand d-flex column justify-content-center">
+<!--  BRAND  -->
+<section class="brand text-center d-flex column justify-content-center">
     <h2>My Brand ‘’XXXD’’</h2>
     <p>Just Keep XXXD Everyday</p>
     <p>2020 年創立的個人服飾品牌
@@ -57,7 +59,8 @@
         <img src="images/brand_img3.png" alt="brand images">
     </div>
 </section>
-<section class="other">
+<!--  OTHER WORKS-->
+<section class="other text-center">
     <h2>Other Works</h2>
     <p>2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
     <div class="other-bg">
@@ -93,7 +96,8 @@
         </div>
     </div>
 </section>
-<footer class="contact">
+<!--  FOOTER  -->
+<footer class="contact text-center">
     <h2>Contact</h2>
     <p>Mail：xxxd@hexschool.com<br>Phone Number：0910123456</p>
 </footer>
