--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
 <section class="about text-center d-flex column justify-content-center ">
     <h2>About</h2>
     <img src="images/photo.png" alt="Joanne Chen photo">
-    <div>
-        <p>Joanne Chen</p><p>1997/10/10</p>
-        <p>National Hex School Normal University 
-            <br>Department of Visual Design
-            <hr>
-        </p>
-    </div>
+    <p>Joanne Chen</p><p>1997/10/10</p>
+    <p>National Hex School Normal University <br>Department of Visual Design<hr></p>
     <ul>
         <li>
             <div class="circle"></div><p>Founder of ‘’XXXD Official’’</p>
@@ -99,7 +94,8 @@
 <!--  FOOTER  -->
 <footer class="contact text-center">
     <h2>Contact</h2>
-    <p>Mail：xxxd@hexschool.com<br>Phone Number：0910123456</p>
+    <p><a href="mailto:xxxd@hexschool.com">Mail：xxxd@hexschool.com</a></p>
+    <p><a href="tel:+0910123456">Phone Number：0910123456</a></p>
 </footer>
 </body>
 </html>
