--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
         <br>引領叛逆少年開啟與社會對話的窗口
         <br>主打概念潮流T-Shirt
     </p>
-    <img class="brand-img1" src="images/brand_img1.png" alt="brand images">
-    <div class="w-1200 d-flex justify-space-around">
-        <img src="images/brand_img2.png" alt="brand images">
-        <img src="images/brand_img3.png" alt="brand images">
-    </div>
+    <ul>
+        <li><img class="brand-img1" src="images/brand_img1.png" alt="brand images"></li>
+        <li class="w-1200 d-flex justify-space-around">
+            <img src="images/brand_img2.png" alt="brand images">
+            <img src="images/brand_img3.png" alt="brand images">
+        </li>
+    </ul>
 </section>
 <!--  OTHER WORKS-->
 <section class="other text-center">
