header+main+footer

--- a/index.html
+++ b/index.html
@@ -8,96 +8,81 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!--   BANNER   -->
-<section class="header d-flex column justify-content-center align-items-center">
-    <div class="headerIntro">
-        <span>Here’s</span>
-        <h1>JOANNE</h1>
-        <p>Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
-        <ul class="socialIcon d-flex">
-            <li><a href="#"><img src="images/behance.svg" alt="behance icon"></a><li>
-            </li><a href="#"><img src="images/facebook.svg" alt="facebook icon"></a><li>
-            </li><a href="#"><img src="images/instagram.svg" alt="instagram icon"></a><li>
-            </li><a href="#"><img src="images/youtube.svg" alt="youtube icon"></a></li>
-        </ul>
-    </div>
-</section>
-<!--   ABOUT   -->
-<section class="about text-center d-flex column justify-content-center ">
-    <h2>About</h2>
-    <img src="images/photo.png" alt="Joanne Chen photo">
-    <p>Joanne Chen</p><p>1997/10/10</p>
-    <p>National Hex School Normal University <br>Department of Visual Design<hr></p>
-    <ul>
-        <li>
-            <div class="circle"></div><p>Founder of ‘’XXXD Official’’</p>
-        </li>
-        <li>
-            <div class="circle"></div><p>Graphic Designer</p>
-        </li>
-        <li>
-            <div class="circle"></div><p>Graphic Intern of Hex School</p>
-        </li>
-    </ul>
-</section>
-<!--  BRAND  -->
-<section class="brand text-center d-flex column justify-content-center">
-    <h2>My Brand ‘’XXXD’’</h2>
-    <p>Just Keep XXXD Everyday</p>
-    <p>2020 年創立的個人服飾品牌
-        <br>引領叛逆少年開啟與社會對話的窗口
-        <br>主打概念潮流T-Shirt
-    </p>
-    <ul>
-        <li><img class="brand-img1" src="images/brand_img1.png" alt="brand images"></li>
-        <li class="w-1200 d-flex justify-space-around">
-            <img src="images/brand_img2.png" alt="brand images">
-            <img src="images/brand_img3.png" alt="brand images">
-        </li>
-    </ul>
-</section>
-<!--  OTHER WORKS-->
-<section class="other text-center">
-    <h2>Other Works</h2>
-    <p>2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
-    <div class="other-bg">
-        <div class="image-top ">
-            <img src="images/work_img1.png" alt="work image">
-            <img src="images/work_img2.png" alt="work image">
-            <img src="images/work_img3.png" alt="work image">
-            <p>海報設計/2018</p>
+    <header class="header d-flex column justify-content-center align-items-center">
+        <div class="headerIntro">
+            <span>Here’s</span>
+            <h1 class="mb-4">JOANNE</h1>
+            <p>Founder of ‘’XXXD Official’’ <br>& Graphic Designer</p>
+            <ul class="socialIcon d-flex">
+                <li><a href="#"><img src="images/behance.svg" alt="behance icon"></a><li>
+                </li><a href="#"><img src="images/facebook.svg" alt="facebook icon"></a><li>
+                </li><a href="#"><img src="images/instagram.svg" alt="instagram icon"></a><li>
+                </li><a href="#"><img src="images/youtube.svg" alt="youtube icon"></a></li>
+            </ul>
         </div>
-        <div class="w-1200 d-flex justify-space-around">
-            <div>
-                <img src="images/work_img4.png" alt="work image">
-                <p>概念攝影/2018</p>
+    </header>
+    <main>
+        <!--   ABOUT   -->
+        <section class="about text-center d-flex column justify-content-center ">
+            <h2>About</h2>
+            <img class="mb-5" src="images/photo.png" alt="Joanne Chen photo">
+            <p class="mb-1">Joanne Chen</p><p class="mb-1">1997/10/10</p>
+            <p class="mb-1">National Hex School Normal University <br>Department of Visual Design<hr></p>
+            <ul>
+                <li>
+                    <div class="circle"></div><p>Founder of ‘’XXXD Official’’</p>
+                </li>
+                <li>
+                    <div class="circle"></div><p>Graphic Designer</p>
+                </li>
+                <li>
+                    <div class="circle"></div><p>Graphic Intern of Hex School</p>
+                </li>
+            </ul>
+        </section>
+        <!--  BRAND  -->
+        <section class="brand text-center d-flex column justify-content-center">
+            <h2 class="mb-2">My Brand ‘’XXXD’’</h2>
+            <p class="mb-4">Just Keep XXXD Everyday</p>
+            <p class="mb-4">2020 年創立的個人服飾品牌
+                <br>引領叛逆少年開啟與社會對話的窗口
+                <br>主打概念潮流T-Shirt
+            </p>
+            <ul>
+                <li><img class="mb-5" src="images/brand_img1.png" alt="brand images"></li>
+                <li class="w-1200 d-flex justify-space-around">
+                    <img src="images/brand_img2.png" alt="brand images">
+                    <img src="images/brand_img3.png" alt="brand images">
+                </li>
+            </ul>
+        </section>
+        <!--  OTHER WORKS-->
+        <section class="other text-center">
+            <h2>Other Works</h2>
+            <p>2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
+            <div class="other-bg">
+                <ul class="image-top w-1200 d-flex justify-space-around align-start">
+                    <li><img src="images/work_img1.png" alt="work image"></li>
+                    <li><img src="images/work_img2.png" alt="work image"><p>海報設計/2018</p></li>
+                    <li><img src="images/work_img3.png" alt="work image"></li>
+                </ul>
+                <ul class="w-1200 d-flex justify-space-around">
+                    <li><img src="images/work_img4.png" alt="work image"><p>概念攝影/2018</p></li>
+                    <li><img src="images/work_img5.png" alt="work image"><p>概念攝影/2018</p></li>
+                </ul>
+                <ul class="w-1200 d-flex justify-space-around">
+                    <li><img src="images/work_img6.png" alt="work image"><p>sasa 酒標設計/2019</p></li>
+                    <li><img src="images/work_img7.png" alt="work image"><p>攝影創作/2018</p></li>
+                    <li><img src="images/work_img8.png" alt="work image"><p>官網設計/2020</p></li>
+                </ul>
             </div>
-            <div>
-                <img src="images/work_img5.png" alt="work image">
-                <p>概念攝影/2018</p>
-            </div>
-        </div>
-        <div class="w-1200 d-flex justify-space-around">
-            <div>
-                <img src="images/work_img6.png" alt="work image">
-                <p>sasa 酒標設計/2019</p>
-            </div>
-            <div>
-                <img src="images/work_img7.png" alt="work image">
-                <p>攝影創作/2018</p>
-            </div>
-            <div>
-                <img src="images/work_img8.png" alt="work image">
-                <p>官網設計/2020</p>
-            </div>
-        </div>
-    </div>
-</section>
-<!--  FOOTER  -->
-<footer class="contact text-center">
-    <h2>Contact</h2>
-    <p><a href="mailto:xxxd@hexschool.com">Mail：xxxd@hexschool.com</a></p>
-    <p><a href="tel:+0910123456">Phone Number：0910123456</a></p>
-</footer>
+        </section>
+    </main>
+    <!--  FOOTER  -->
+    <footer class="contact text-center">
+        <h2 class="mb-1">Contact</h2>
+        <p><a href="mailto:xxxd@hexschool.com">Mail：xxxd@hexschool.com</a></p>
+        <p><a href="tel:+0910123456">Phone Number：0910123456</a></p>
+    </footer>
 </body>
 </html>
